--- a/lesson4/css/style.css
+++ b/lesson4/css/style.css
@@ -40,7 +40,7 @@ p, .p{
 	display: inline-block;
 	box-sizing: border-box;
 	padding: 5%;
-
+	vertical-align: middle;
 }
 
 .phone img{
@@ -54,6 +54,7 @@ p, .p{
 	display: inline-block;
 	box-sizing: border-box;
 	padding: 5%;
+	vertical-align: middle;
 }
 
 .cardText h2{
