--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -7,11 +7,11 @@
 /*======================обёртка, позиционирование, отступ под правое меню*/
  .wrapper{
  	box-sizing: border-box;
- 	max-width: 1100px;
- 
+ 	max-width: 1400px;
+ 	overflow: hidden;
  	margin: 30px auto;
  	
- 	padding-right: 300px;
+ 	/*padding-right: 300px;*/
  }
 /*======================поведение изображений, адаптив*/
  img{
@@ -24,13 +24,14 @@
  }
 
  .menu{
- 	width: 280px;
+ 	/*width: 280px;*/
  	position: fixed;
+ 	/*float: left;*/
  	top: 60px;
- 	right: 2%;
+ 	left: 75%;
 	background-color: #ccc;
  	box-sizing: border-box;
- 	padding: 20px;
+ 	padding: 1%;
 
  }
 
@@ -44,8 +45,25 @@
   .menu a:hover, a:hover{
  	 	color: rgba(200,0,255,.6);
  	}
+
+ 	.section1{
+ 		width: 74%;
+ 		float: left;
+ 		overflow: hidden;
+ 		margin-right: 10px;
+ 	}
+
+ 	.section2{
+ 		width: 25%;
+ 		float: left;
+ 		overflow: hidden;
+
+ 	}
 /*==============================адптив, поведение меню в зависимости от размера экрана*/
- @media screen and (min-width: 1200px ){
+
+
+
+/* @media screen and (min-width: 1200px ){
  	.menu{
  	 	right: 5%;
 	}
@@ -60,4 +78,4 @@
  	 	display: none;
 	}
 
- }
+ }*/
