--- a/LineMenu2/css/style.css
+++ b/LineMenu2/css/style.css
@@ -42,7 +42,7 @@ ul li a:after {
 /*полупрозрачный текст*/
 .box {
 	height: 100vh;
-	background: url(https://cdn.pixabay.com/photo/2018/03/19/20/20/wheat-3241114_1280.jpg);
+	background: url(../img/wheat-3241114_1280.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
