--- a/LineMenu2/css/style.css
+++ b/LineMenu2/css/style.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Lobster');
+/*@import url('https://fonts.googleapis.com/css?family=Lobster');*/
 
 body, h1{
+	font-family: 'Lobster', cursive;
   margin: 0;
   padding: 0;
 }
