--- a/LineMenu2/css/style.css
+++ b/LineMenu2/css/style.css
@@ -6,7 +6,7 @@ body, h1{
 }
 
 ul {
-	font-family: 'Lobster', arial;
+	font-family: 'Lobster', cursive;
 	font-size: 200%;
   margin: 10%;
   list-style: none;
