--- a/LineMenu2/css/style.css
+++ b/LineMenu2/css/style.css
@@ -1,5 +1,10 @@
 /*@import url('https://fonts.googleapis.com/css?family=Lobster');*/
 
+@font-face {
+    font-family: Lobster; /* Гарнитура шрифта */
+    src: url(../fonts/Lobster-Regular.ttf); /* Путь к файлу со шрифтом */
+   }
+
 body, h1{
   margin: 0;
   padding: 0;
