--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -17,6 +17,10 @@
  img{
  	width: 100%;
  }
+
+img:hover{
+	transform: scale(1.3);
+}
 /*======================декорирование заголовков и ссылок*/
  h1, .h1,  h2, .h2{
  	text-align: center;
