--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -16,7 +16,7 @@
 /*======================поведение изображений, адаптив*/
  img{
  	width: 100%;
-	transition: .5s;
+	transition: transform .5s;
  }
 
 img:hover{
