--- a/FormStile/css/style.css
+++ b/FormStile/css/style.css
@@ -16,14 +16,34 @@
 }
 
 /*В качестве фона для всей секции будет большая фотография, которая займет 
-собой все пространство - cover и не будет повторяться - no-repeat.*/
+собой все пространство - cover и не будет повторяться - no-repeat.
 
-body {
+что именно мы хотим получить:
+
+- Полная заливка окна картинкой, без пробелов.
+- Растягивание фоновой картинки, насколько это нужно.
+- Соответствие пропорций картинки.
+- Картинка должна находиться в центре.
+- Это должно быть максимально кроссбраузерно.
+- И без всяких махинаций с flash.
+-------------------------------------------
+Мы будем использовать html элемент, это лучше чем body, 
+так как он всегда будет равен высоте окна браузера. 
+Мы сделаем background фиксированным и поставим его в центре окна, 
+после этого мы его растянем на весь экран с помощью свойства background-size.
+*/
+html{
 	/*оригинал изображения https://cdn.pixabay.com/photo/2017/06/12/17/54/anemone-2396299_1280.jpg*/
-	font-family: 'Caveat', sans-serif;
   background: url("../img/anemone-2396299_1280.jpg");
   background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
   background-size: cover;
+}
+
+
+body {
+  font-family: 'Caveat', sans-serif;
 }
 
  section {
