--- a/GAsvgAnim/css/style.css
+++ b/GAsvgAnim/css/style.css
@@ -8,7 +8,7 @@ body, *{
 	text-align: center;
 }
 
-#svg_animation{
+#svg_animation, #undefined{
 	width: 300px;
 	height: 300px;
 	margin: 60px auto;
