--- a/lesson3/css/style.css
+++ b/lesson3/css/style.css
@@ -64,7 +64,11 @@ img:hover{
  		overflow: hidden;
 
  	}
-/*==============================адптив, поведение меню в зависимости от размера экрана*/
+#chapter1:target{
+	background: #fc0; /* Цвет фона */
+    	padding: 3px; 
+}
+/*==============================адaптив, поведение меню в зависимости от размера экрана*/
 
 
 
